Fix locale issues on management eco news page (#8870)
* Fix locale issues on management eco news page

* Fix build fail tests

* Remove unused code